--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 3333
-EMAIL = spacecode11@gmail.com
+EMAIL = 
 PASSWORD = add password
 
 DOMAIN_URL = http://google.com
 
 SECRET = Restaurant
 
-STORAGEBUCKET = testing-store-ebe01.appspot.com
+STORAGEBUCKET = testing-53585-0004.appspot.com
